# rust-actix

./: .env  .gitignore  Cargo.toml  Dockerfile  LICENSE  Makefile  diesel.toml  docker-compose.yaml  markdown  mermaid
bindings/: CandlesStruct.ts  ColorsStruct.ts  CreateCandleRequest.ts  CreateUserRequest.ts  User.ts
config/: dev.toml  prod.toml
migrations/: 20250314091801_new_migration.sql  20250326220955_candles.sql  20250401083229_new_migration.sql  20250401084520_new_migration.sql
src/: config.rs  logger.rs  main.rs
src/app/: config.rs  database.rs  db.rs  env.rs  handlers.rs  mod.rs  repositories.rs  services.rs
src/database/: db.rs
src/feature/: mod.rs
src/feature/candles/: entity.rs  handler.rs  mod.rs  repository.rs  service.rs  service_test.rs
src/feature/colors/: entity.rs  handler.rs  repository.rs  service.rs
src/feature/user/: entity.rs  handler.rs  jwt.rs  mod.rs  repository.rs  service.rs
src/servers/http/: middleware.rs  mod.rs  server.rs  serverhttp.rs
src/utils/: errors.rs  errors_message.rs  lib.rs  mod.rs  swagger.rs
