[package]
name = "rust-actix"
version = "0.0.1"
edition = "2024"

[dependencies]
tokio = { version = "1.44.0", features = ["full"] }
serde ={version = "1.0.219",features = ["derive"]}
sqlx ={ version = "0.8.3", features = ["postgres", "runtime-tokio-rustls", "derive"] }
dotenvy = "0.15.7"
serde_json = "1.0.140"
config = "0.15.9"
axum = "0.8.1"
utoipa = {version= "5.3.1", features=["axum_extras"]}
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"]}
slog = "2.7.0"
slog-term = "2.9.1"
tower-http = "0.6.2"
toml = "0.8.20"
simple_logger = "5.0.0"
slog-async = "2.8.0"
slog-scope = "4.4.0"
slog-stdlog = "4.1.1"
log = "0.4.26"
env_logger = "0.11.7"

[profile.release]
opt-level = 3
debug = 2
lto = "fat"
codegen-units = 1
strip = true
